master: typo in partexp2 notebook

--- a/work/#partexp2.ipynb
+++ b/work/#partexp2.ipynb
@@ -241,6 +241,39 @@
     "X_train, X_test, y_train, y_test = train_test_split(x_values, y_values, test_size=0.33, random_state=42)\n",
     "X_train = list(map(lambda x: [x], X_train))\n",
     "X_test = list(map(lambda x: [x], X_test))\n",
+    "\n",
+    "\n",
+    "# Train model\n",
+    "reg = LinearRegression()\n",
+    "reg.fit(X_train,y_train)\n",
+    "y_pred = reg.predict(X_test)\n",
+    "coefs.append(reg.coef_)\n",
+    "intercepts.append(reg.intercept_)\n",
+    "mse.append(mean_squared_error(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse = []\n",
+    "coefs = []\n",
+    "intercepts = []\n",
+    "# # Split dataset into learning/test sets\n",
+    "# for random_split in [4]:\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(x_values, y_values, test_size=0.33, random_state=42)\n",
+    "X_train = list(map(lambda x: [x], X_train))\n",
+    "X_test = list(map(lambda x: [x], X_test))\n",
+    "\n",
+    "\n",
+    "# cost function (mse)\n",
+    "# model (affine)\n",
+    "# gradient descent\n",
+    "\n",
+    "\n",
     "# Train model\n",
     "reg = LinearRegression()\n",
     "reg.fit(X_train,y_train)\n",
